add modal and crud categorias

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -22,14 +22,12 @@
           <tr *ngFor="let data of tableUsers.data">
               <td>{{ data.nombre_empleado }}</td>
               <td>{{ data.nombre_usuario }}</td>
-              <ng-container *ngIf="data.id_role == '1'; then adminThen;"></ng-container>
-              <ng-template #adminThen>
-                <td>Administrador</td>
-              </ng-template>  
+              <td>{{ data.nombre_role }}</td>
               <td style="text-align: center">
                   <button style="margin-right: 10px" nzTitle="Editar" nzPlacement="topCenter" nz-tooltip class="btn btn-success" (click)="showModalEditarUsuario(data)"><i class="fa fa-pencil" aria-hidden="true"></i></button>                    
                   <button style="margin-right: 10px" class="btn btn-danger" nzTitle="Eliminar" nzPlacement="topCenter" nz-tooltip (click)="showDeleteConfirm(data)"><i class="fa fa-trash" aria-hidden="true"></i></button>
-               </td>
+                  <button class="btn btn-role" nzTitle="Role" nzPlacement="topCenter" nz-tooltip (click)="showModalRoles()"><i class="fa fa-key" aria-hidden="true"></i></button>
+                </td>
           </tr>
       </tbody>
   </nz-table>
@@ -80,7 +78,7 @@
                         <label>Rol</label>
                         <div class="input-group">
                             <nz-select style="width: 140px;" formControlName="rol" nzShowSearch nzAllowClear nzPlaceHolder="Seleccionar..">
-                                <nz-option nzLabel="Administrador" nzValue="admin"></nz-option>
+                                <nz-option *ngFor="let role of roles;" nzLabel="{{ role.nombre_role }}" nzValue="{{ role.id_role }}"></nz-option>
                             </nz-select>
                         </div>
                             <div *ngIf="submittedAgregarUsuario && fau.rol.errors" class="invalid-feedback d-block">
@@ -140,7 +138,7 @@
                     <label>Rol</label>
                     <div class="input-group">
                         <nz-select style="width: 140px;" formControlName="rol" nzShowSearch nzAllowClear nzPlaceHolder="Seleccionar..">
-                            <nz-option nzLabel="Administrador" nzValue="admin"></nz-option>
+                            <nz-option *ngFor="let role of roles;" nzLabel="{{ role.nombre_role }}" nzValue="{{ role.id_role }}"></nz-option>
                         </nz-select>
                     </div>
                     <div *ngIf="submittedEditarUsuario && feu.rol.errors" class="invalid-feedback d-block">
@@ -156,4 +154,33 @@
       <button nz-button nzType="default" (click)="handleCancelEditarUsuario()">Cerrar</button>
       <button nz-button nzType="primary" (click)="onSubmitEditarUsuario()" [nzLoading]="isConfirmLoadingEditarUsuario">Guardar cambios</button>
   </ng-template>
+</nz-modal>
+
+
+<!--                                             ROLES                                                                  -->
+ 
+
+<nz-modal [(nzVisible)]="isVisibleRoles" [nzWidth]="800" [nzTitle]="modalTitleRoles" [nzContent]="modalContentRoles" [nzFooter]="modalFooterRoles" (nzOnCancel)="handleCancelRoles()">
+    <ng-template #modalTitleRoles>Modulos</ng-template>
+  
+    <ng-template #modalContentRoles>
+        
+        <nz-tree
+            [nzData]="nodes"
+            nzCheckable
+            nzMultiple
+            [nzCheckedKeys]="defaultCheckedKeys"
+            [nzExpandedKeys]="defaultExpandedKeys"
+            [nzSelectedKeys]="defaultSelectedKeys"
+            (nzClick)="nzEvent($event)"
+            (nzExpandChange)="nzEvent($event)"
+            (nzCheckBoxChange)="nzEvent($event)">
+        </nz-tree>
+
+    </ng-template>
+  
+    <ng-template #modalFooterRoles>
+        <button nz-button nzType="default" (click)="handleCancelRoles()">Cerrar</button>
+        <button nz-button nzType="primary" (click)="onSubmitEditarUsuario()" [nzLoading]="isConfirmLoadingRoles">OK</button>
+    </ng-template>
 </nz-modal>
