--- a/src/app/core/sidebar-right-inner/sidebar-right-inner.component.html
+++ b/src/app/core/sidebar-right-inner/sidebar-right-inner.component.html
@@ -15,12 +15,11 @@
                   <a class="btn-primary-outline pull-right" (click)="showDeleteConfirmCategoria(categoria)">
                     <i class="fa fa-trash" aria-hidden="true"></i>
                   </a>
-                  <a style="margin-right: 10px" class="btn-primary-outline-edit pull-right" (click)="showDeleteConfirmCategoria(categoria)">
+                  <a style="margin-right: 10px" class="btn-primary-outline-edit pull-right" (click)="showModalEditarCategoria(categoria)">
                     <i class="fa fa-edit" aria-hidden="true"></i>
                   </a>{{categoria.nombre_categoria}}
                 </label>  
             </ng-container>
-          
         </mk-box>
       </div>
     </mk-tab-content>
@@ -41,16 +40,18 @@
  
 
 
-  <nz-modal [(nzVisible)]="isVisibleAgregarCategoria" [nzWidth]="300" [nzTitle]="modalTitleAgregarCategoria" [nzContent]="modalContentAgregarCategoria" [nzFooter]="modalFooterAgregarCategoria" (nzOnCancel)="handleCancelAgregarCategoria()">
-      <ng-template #modalTitleAgregarCategoria>Categoria</ng-template>
-      <ng-template #modalContentAgregarCategoria>
-          
-        <label for="">Nombre categoria</label>
-        <input type="text" nz-input />
+  <nz-modal [(nzVisible)]="isVisibleEditarCategoria" [nzWidth]="300" [nzTitle]="modalTitleEditarCategoria" [nzContent]="modalContentEditarCategoria" [nzFooter]="modalFooterEditarCategoria" (nzOnCancel)="handleCancelEditarCategoria()">
+      <ng-template #modalTitleEditarCategoria>Categoria</ng-template>
+      <ng-template #modalContentEditarCategoria>
+        
+        <form [formGroup]="categoriaEditarForm">
+          <label >Nombre categoria</label>
+          <input type="text" nz-input formControlName="editarCategoria" />
+        </form>
 
       </ng-template>
-      <ng-template #modalFooterAgregarCategoria>
-          <button nz-button nzType="primary" (click)="handleCancelAgregarCategoria()">Agregar</button>
+      <ng-template #modalFooterEditarCategoria>
+          <button nz-button nzType="primary" (click)="handleCancelEditarCategoria()">Guardar cambios</button>
       </ng-template>
   </nz-modal>
  
