--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,7 +1,7 @@
    <mk-box [isRemovable]="false" [isCollapsed]="false">
-        <div class="container">
+        <div class="container pull-left">
             <div class="row">
-                <div class="col-4">
+                <div class="col-sm-6">
                     <button nz-button nzType="primary" class="pull-left" (click)="showModalAgregarCliente()">Agregar cliente</button>
                 </div>
             </div>
