--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -20,10 +20,10 @@
     </mk-layout-content>
     <mk-layout-footer>
       <mk-layout-footer-left>
-        <strong>Cosecha Express<span>&#174;</span> {{ getYear() }}</strong>
+        <strong><img src="favicon.ico" alt="La Cosecha Express" style="height: 20px; margin-bottom: 6px;">osecha Express<span>&#174;</span> {{ getYear() }}</strong>
       </mk-layout-footer-left>
       <mk-layout-footer-right>
-        <b><a href="http://hv31svg103.neubox.net:2095/" target="_blank">Grupo TLK<span>&#174;</span></a></b>
+        <b><a href="http://hv31svg103.neubox.net:2095/" target="_blank"><img src="assets/img/logo.png" style="height: 22px; margin-bottom: 6px;" alt="Grupo TLK"> Grupo TLK<span>&#174;</span></a></b>
       </mk-layout-footer-right>
     </mk-layout-footer>
   </mk-layout-wrapper>
